Support for dictionary names and annotations
